# Hyperbolic-Tensor-Folding

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
benchmarks/: benchmark_memory.py
demo/: app.py
examples/: hf_integration.py  main.py  test_transformer.py  tinyllama_integration.py
examples/src/: data_gen.py
htf_pytorch/: __init__.py  attention.py  hf_integration.py  kv_cache.py  layers.py  manifold.py
htf_pytorch.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
htf_pytorch/adapters/: __init__.py  llama_adapter.py
htf_pytorch/kernels/: poincare_dist.py
scripts/: build_pypi.py
src/: euclidean_baseline.py  htf_core.py  visualizer.py
tests/: test_attention.py  test_manifold.py
